finished authentication and authorization with extra validation for routes
